# github-actions-vanilla-monorepo-example

./: .gitignore  README.md  docker-compose.yaml
.devcontainer/basic/: devcontainer.json
.devcontainer/component-a/: devcontainer.json
.devcontainer/component-b/: devcontainer.json
.devcontainer/node/: devcontainer.json
.devcontainer/python/: devcontainer.json
.github/actions/delete-deployments/: action.yaml
.github/workflows/: common-cleanup.yaml  common-deploy-images.yaml  common-deploy-skip.yaml  common-deploy.yaml  common-images.yaml  common-skip.yaml  component-a-trigger.yaml  component-b-trigger.yaml  component-c-trigge.yaml  images-node-trigger.yaml  images-python-trigger.yaml
component-a/: eslint.config.mjs  package-lock.json  package.json
component-a/scripts/: deploy.sh  lint.sh  test.sh
component-a/src/: index.ts
component-b/: pyproject.toml
component-b/scripts/: lint.sh  test.sh
component-b/src/: main.py
component-c/: pyproject.toml
component-c/scripts/: lint.sh
component-c/src/: main.py
images/: node.Dockerfile  python.Dockerfile
