[project]
name = "component-b"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=3.3.4",
    "pytest>=8.3.5",
]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring"
]
score = false
